[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scene/Click/MnoHead.gd" type="Script" id=2]
[ext_resource path="res://Image/MusicalBass.png" type="Texture" id=3]
[ext_resource path="res://Image/Head_mno.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 9.4941

[node name="Tek_abc3dz_mno" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D_mno" type="CollisionShape2D" parent="."]
position = Vector2( -0.568054, -2.6663 )
scale = Vector2( 4.81676, 4.62701 )
shape = SubResource( 1 )

[node name="Sprite_mno" type="Sprite" parent="."]
modulate = Color( 0.878431, 0.537255, 0, 1 )
position = Vector2( -0.880249, -1.7605 )
texture = ExtResource( 4 )

[node name="Sprite2_mno" type="Sprite" parent="."]
visible = false
position = Vector2( -0.880249, -1.7605 )
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="input_event" from="." to="." method="_on_Tek_abc3dz_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
